--- a/one/index.html
+++ b/one/index.html
@@ -14,7 +14,7 @@
         <div class="header-blog">
             <div class="header-top">
                 <h3 class="indicorp">
-                    indicorp
+                    INTOCODE
                 </h3>
                 <nav class="head-nav">
                     <ul>
